<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nebulock</string>
    <string name="createaccount">Create Account</string>
    <string name="email">Email Address:</string>
    <string name="emailaddress">Email Address:</string>
    <string name="confirmemailaddress">Confirm Email Address:</string>
    <string name="password">Password:</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="LoginScreen">Login Screen</string>
    <string name="settings">Settings</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account? Create One!</string>
    <string name="next">Next</string>
    <string name="done">Done!</string>
    
    <string name="strength">Place holder strength indicator</string>
    
    <string name="whatsakeyring">What\'s a keyring?</string>
    <string name="keyringexplanation">A keyring is a ring that you use to hold your keys. (PLACEHOLDER EXPLANATION SOMEONE SHOULD CHANGE IT; CONNOR I MEAN YOU)</string>
	<string name="keyringexplanationbutton">I get it</string>
	
	<string name="createkeyring">Create Your Keyring</string>
	<string name="entermasterpassword">Enter Master Password:</string>
	<string name="confirmmasterpassword">Confirm Master Password:</string>
	<string name="securityquestion">Enter Security Question:</string>
	<string name="securityquestionanswer">Enter Security Question Answer:</string>
		
</resources>
