<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textViewCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textViewKeyringExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/createaccount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewCreateAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewKeyringExplanation"
        android:layout_marginTop="25dp"
        android:text="@string/emailaddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextCreateAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateAccountEmail"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewCreateAccountEmail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewCreateAccountConfirmEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCreateAccountEmail"
        android:layout_below="@+id/editTextCreateAccountEmail"
        android:layout_marginTop="20dp"
        android:text="@string/confirmemailaddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextCreateAccountConfirmEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateAccountConfirmEmail"
        android:layout_alignRight="@+id/editTextCreateAccountEmail"
        android:layout_below="@+id/textViewCreateAccountConfirmEmail"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewCreateAccountPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCreateAccountConfirmEmail"
        android:layout_below="@+id/editTextCreateAccountConfirmEmail"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextCreateAccountPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateAccountPassword"
        android:layout_alignRight="@+id/editTextCreateAccountConfirmEmail"
        android:layout_below="@+id/textViewCreateAccountPassword"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewCreateAccountConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCreateAccountPassword"
        android:layout_below="@+id/editTextCreateAccountPassword"
        android:layout_marginTop="20dp"
        android:text="@string/confirmpassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextCreateAccountConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateAccountConfirmPassword"
        android:layout_alignRight="@+id/editTextCreateAccountPassword"
        android:layout_below="@+id/textViewCreateAccountConfirmPassword"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCreateAccountConfirmPassword"
        android:layout_below="@+id/editTextCreateAccountConfirmPassword"
        android:text="@string/strength"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextCreateAccountConfirmPassword"
        android:layout_alignTop="@+id/textViewStrength"
        android:text="@string/next"
        android:onClick="createAccount"/>

</RelativeLayout>
